--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 APP_PORT=3000
-MONGODB_URL=mongodb://localhost:27017/brightapp_test
-AMPQ_URL=amqp://localhost:5672
-AMPQ_QUERY=chat_queue
+MONGODB_URL=mongodb://local:port/database
+AMPQ_URL=amqp://local:port
+AMPQ_QUERY=ampq_queue
